--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>优闲</title>
   </head>
-  <body>
+  <body id="x">
     <div id="app"></div>
   </body>
 </html>
